# UartTrial

./: .gitmodules  CMakeLists.txt  main.c
FreeRTOS/: CMakeLists.txt
FreeRTOS/Config/: FreeRTOSConfig.h
